--- a/app/src/main/res/layout/activity_addcard.xml
+++ b/app/src/main/res/layout/activity_addcard.xml
@@ -103,7 +103,7 @@
                     android:layout_below="@+id/tvCardMsg"
                     android:layout_marginTop="@dimen/_20sdp"
                     android:hint="Name on Card"
-                    android:textColorHint="@color/primary_black"
+                    android:textColorHint="@color/light_gray"
                     app:boxStrokeColor="@color/primary_green"
                     app:errorIconDrawable="@null"
                     app:hintTextColor="@color/primary_green">
@@ -208,7 +208,7 @@
                             style="@style/TextInputLayout.OutlinedBox"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textColorHint="@color/primary_black"
+                            android:textColorHint="@color/light_gray"
                             app:boxStrokeColor="@color/primary_green"
                             app:errorIconDrawable="@null"
                             android:hint="Card Exp"
@@ -276,7 +276,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="CVV/CVC"
-                            android:textColorHint="@color/primary_black"
+                            android:textColorHint="@color/light_gray"
                             app:boxStrokeColor="@color/primary_green"
                             app:errorIconDrawable="@null"
                             app:hintTextColor="@color/primary_green">
