--- a/app/src/main/res/layout/card_number_layout.xml
+++ b/app/src/main/res/layout/card_number_layout.xml
@@ -27,7 +27,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/_7sdp"
-                android:src="@drawable/ic_visa_inactive" />
+                android:src="@drawable/ic_visa_inactive"
+                android:visibility="invisible"/>
 
             <View
                 android:layout_width="1.5dp"
