--- a/app/src/main/res/layout/activity_buy_token.xml
+++ b/app/src/main/res/layout/activity_buy_token.xml
@@ -220,18 +220,19 @@
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
                             android:layout_marginLeft="@dimen/_5sdp"
-                            android:layout_toLeftOf="@+id/divider"
+                            android:layout_toLeftOf="@+id/imgConvert"
                             android:orientation="horizontal">
 
                             <EditText
                                 android:id="@+id/etAmount"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:autoSizeMinTextSize="@dimen/_12ssp"
                                 android:background="@color/white"
                                 android:fontFamily="@font/opensans_bold"
-                                android:gravity="center_vertical"
+                                android:gravity="center_vertical|right"
                                 android:hint="0.00"
+                                android:ellipsize="end"
+                                android:textDirection="rtl"
                                 android:inputType="numberDecimal"
                                 android:maxLength="@string/maxlength"
                                 android:textColor="@color/primary_black"
@@ -256,7 +257,8 @@
                             android:layout_gravity="center"
                             android:layout_marginLeft="@dimen/_5sdp"
                             android:layout_toLeftOf="@+id/imgConvert"
-                            android:background="@color/light_gray" />
+                            android:background="@color/light_gray"
+                            android:visibility="gone" />
 
                         <ImageView
                             android:id="@+id/imgConvert"
