--- a/app/src/main/res/layout/buy_token_order_review.xml
+++ b/app/src/main/res/layout/buy_token_order_review.xml
@@ -36,7 +36,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/opensans_bold"
-            android:gravity="right"
             android:text="159.40"
             android:textColor="@color/primary_color"
             android:textSize="@dimen/_35ssp" />
@@ -78,9 +77,10 @@
 
             <TextView
                 android:id="@+id/tvBankName"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/_10sdp"
+                android:layout_weight="0.7"
                 android:fontFamily="@font/opensans_semibold"
                 android:singleLine="true"
                 android:text="Bank of America"
@@ -89,8 +89,9 @@
 
             <TextView
                 android:id="@+id/tvAccount"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="1.3"
                 android:fontFamily="@font/opensans_semibold"
                 android:singleLine="true"
                 android:text="••••5359"
