--- a/app/src/main/res/layout/buy_token_transaction_pending.xml
+++ b/app/src/main/res/layout/buy_token_transaction_pending.xml
@@ -9,14 +9,14 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:orientation="vertical">
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -151,24 +151,24 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="reflected in your token account. "
-                        android:textSize="@dimen/_10sdp"
                         android:fontFamily="@font/opensans_regular"
-                        android:textColor="@color/primary_black"
                         android:paddingLeft="@dimen/_10sdp"
-                        />
+                        android:text="reflected in your token account. "
+                        android:textColor="@color/primary_black"
+                        android:textSize="@dimen/_10sdp" />
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/learn"
-                        android:textSize="@dimen/_10sdp"
-                        android:textColor="@color/teal_200"
-                        android:gravity="left"
                         android:layout_weight="1"
-                        />
+                        android:gravity="left"
+                        android:text="@string/learn"
+                        android:textColor="@color/teal_200"
+                        android:textSize="@dimen/_10sdp" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
@@ -177,18 +177,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/nextCV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_32sdp"
                 android:gravity="center"
                 android:padding="@dimen/_10sdp"
                 app:cardBackgroundColor="#00a6a2"
-                app:cardCornerRadius="@dimen/_20sdp"
-                android:layout_marginTop="@dimen/_32sdp">
+                app:cardCornerRadius="@dimen/_20sdp">
 
                 <TextView
                     android:layout_width="match_parent"
