--- a/app/src/main/res/layout/activity_transaction_list.xml
+++ b/app/src/main/res/layout/activity_transaction_list.xml
@@ -130,7 +130,7 @@
                     android:gravity="center_vertical"
                     android:text="Pending"
                     android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_12sdp"
+                    android:textSize="@dimen/_12ssp"
                     android:visibility="gone" />
 
                 <LinearLayout
