--- a/app/src/main/res/layout/activity_withdraw_instant_transaction.xml
+++ b/app/src/main/res/layout/activity_withdraw_instant_transaction.xml
@@ -410,8 +410,7 @@
                               android:textSize="@dimen/_11ssp"
                               android:fontFamily="@font/opensans_semibold"
                               android:textColor="@color/primary_black"
-                              android:gravity="right"
-                             />
+                              android:gravity="right" />
                           <ImageView
                               android:id="@+id/withinrefIDIV"
                               android:layout_width="@dimen/_11sdp"
