--- a/app/src/main/res/layout/notifications_item.xml
+++ b/app/src/main/res/layout/notifications_item.xml
@@ -230,7 +230,7 @@
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/opensans_bold"
                                 android:gravity="center"
-                                android:text="Remind"
+                                android:text="Reminder"
                                 android:textColor="@color/white"
                                 android:textSize="@dimen/_12ssp" />
                         </LinearLayout>
