--- a/app/src/main/res/layout/card_number_layout.xml
+++ b/app/src/main/res/layout/card_number_layout.xml
@@ -47,7 +47,7 @@
             android:digits="0123456789"
             android:fontFamily="@font/opensans_semibold"
             android:gravity="center_vertical"
-            android:hint="XXXX XXXX XXXX XXXX"
+            android:hint="Card Number"
             android:imeOptions="actionNext"
             android:inputType="number"
             android:maxLength="19"
@@ -87,6 +87,7 @@
         android:text="Card Number"
         android:textColor="@color/primary_black"
         android:textSize="@dimen/text_size_11sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/hintdHolderLL"
         app:layout_constraintStart_toStartOf="@+id/hintdHolderLL"
         app:layout_constraintTop_toTopOf="@+id/hintdHolderLL" />
