--- a/app/src/main/res/layout/activity_withdraw_bank_acc_transctn.xml
+++ b/app/src/main/res/layout/activity_withdraw_bank_acc_transctn.xml
@@ -195,7 +195,6 @@
                             android:paddingTop="@dimen/_8sdp"
                             android:paddingRight="@dimen/_11sdp"
                             android:paddingBottom="@dimen/_11sdp"
-
                             >
 
                             <TextView
@@ -577,9 +576,7 @@
                     android:text="Activity Log"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_12ssp"
-                    android:visibility="gone"
-
-                    />
+                    android:visibility="gone" />
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
