--- a/app/src/main/res/layout/activity_business_tracker_account.xml
+++ b/app/src/main/res/layout/activity_business_tracker_account.xml
@@ -46,6 +46,17 @@
             android:textSize="@dimen/_11ssp"
             android:visibility="visible" />
 
+        <TextView
+            android:id="@+id/dashboardTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="@dimen/_21sdp"
+            android:fontFamily="@font/opensans_bold"
+            android:text="CLICK HERE TO GO DASHBOARD"
+            android:textColor="@color/error_red"
+            android:textSize="@dimen/_11ssp"
+            android:visibility="visible" />
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
