--- a/app/src/main/res/layout/activity_business_profile.xml
+++ b/app/src/main/res/layout/activity_business_profile.xml
@@ -322,7 +322,7 @@
                             android:layout_height="1dp"
                             android:background="@color/viewcolor" />
                         <LinearLayout
-                            android:id="@+id/bBAInformationLL"
+                            android:id="@+id/DBAInformationLL"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
