--- a/app/src/main/res/layout/activity_dbainfo_details.xml
+++ b/app/src/main/res/layout/activity_dbainfo_details.xml
@@ -11,7 +11,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_16sdp"
         android:background="@drawable/bottomradius"
         android:orientation="vertical"
         android:paddingStart="@dimen/_21sdp"
@@ -19,14 +18,14 @@
         android:paddingBottom="@dimen/_11sdp">
 
         <LinearLayout
-            android:id="@+id/CloseLL"
+            android:id="@+id/closeLL"
             android:layout_width="@dimen/_30sdp"
             android:layout_height="wrap_content">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_chevron_left" />
+                android:src="@drawable/ic_back" />
         </LinearLayout>
 
         <TextView
@@ -43,12 +42,15 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="none">
+        android:scrollbars="none"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingTop="@dimen/_16sdp"
+            >
 
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
@@ -138,7 +140,7 @@
                         android:fontFamily="@font/opensans_bold"
                         android:text="Fire BBQ"
                         android:textColor="@color/primary_black"
-                        android:textSize="@dimen/_24ssp" />
+                        android:textSize="@dimen/_16ssp" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -168,9 +170,11 @@
                         android:layout_gravity="center"
                         android:background="@drawable/bg_core_f2f5f8"
                         android:fontFamily="@font/opensans_semibold"
+                        android:layout_marginTop="@dimen/_7sdp"
                         android:paddingStart="@dimen/_10sdp"
                         android:paddingTop="@dimen/_4sdp"
                         android:paddingEnd="@dimen/_9sdp"
+                        android:paddingBottom="@dimen/_6sdp"
                         android:text="Restaurants"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_12ssp" />
@@ -244,7 +248,7 @@
                     <View
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/_1sdp"
-                        android:layout_marginBottom="@dimen/_17sdp"
+                        android:layout_marginBottom="@dimen/_9sdp"
                         android:background="@color/light_gray" />
 
                     <LinearLayout
@@ -359,7 +363,7 @@
                     <View
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/_1sdp"
-                        android:layout_marginBottom="@dimen/_17sdp"
+                        android:layout_marginBottom="@dimen/_16sdp"
                         android:background="@color/light_gray"
 
                         />
