--- a/app/src/main/res/layout/activity_add_benificial_owner.xml
+++ b/app/src/main/res/layout/activity_add_benificial_owner.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical"
     android:paddingLeft="@dimen/_20sdp"
     android:paddingTop="@dimen/_20sdp"
     android:paddingRight="@dimen/_20sdp"
-    android:background="@color/white"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
     tools:context=".view.business.AddBeneficialOwnerActivity">
 
@@ -22,7 +22,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-              <LinearLayout
+
+            <LinearLayout
                 android:id="@+id/layoutClose"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
@@ -35,7 +36,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_close" />
-              </LinearLayout>
+            </LinearLayout>
 
             <View
                 android:id="@+id/divider1"
@@ -149,8 +150,8 @@
                         style="@style/TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/firstName"
                         android:layout_marginTop="@dimen/_21sdp"
+                        android:hint="@string/firstName"
                         android:textColorHint="@color/light_gray"
                         app:boxStrokeColor="@color/primary_green"
                         app:errorIconDrawable="@null"
@@ -204,8 +205,8 @@
                         style="@style/TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/lastName"
                         android:layout_marginTop="@dimen/_21sdp"
+                        android:hint="@string/lastName"
                         android:textColorHint="@color/light_gray"
                         app:boxStrokeColor="@color/primary_green"
                         app:errorIconDrawable="@null"
@@ -440,6 +441,7 @@
                             android:textColor="@color/white"
                             android:textSize="@dimen/_12ssp" />
                     </androidx.cardview.widget.CardView>
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -460,6 +462,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="gone">
+
             <ScrollView
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
@@ -475,8 +478,8 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/opensans_bold"
                         android:layout_marginTop="@dimen/_21sdp"
+                        android:fontFamily="@font/opensans_bold"
                         android:text="@string/MaillingAddress"
                         android:textColor="@color/primary_green"
                         android:textSize="@dimen/_12ssp" />
@@ -701,8 +704,8 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:cursorVisible="false"
-                                android:focusableInTouchMode="false"
                                 android:focusable="false"
+                                android:focusableInTouchMode="false"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:hint="@string/statehint"
                                 android:imeOptions="actionNext"
@@ -813,7 +816,7 @@
                         android:layout_marginTop="@dimen/_14sdp"
                         android:background="@drawable/corner_bg_grey"
                         android:hint="@string/country"
-                        android:textColorHint="@color/primary_black"
+                        android:textColorHint="@color/dark_grey"
                         app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                         app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                         app:boxCornerRadiusTopEnd="@dimen/_10sdp"
@@ -876,18 +879,16 @@
         </RelativeLayout>
     </com.greenbox.coyni.intro_slider.AutoScrollViewPager>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_6sdp"
-            android:layout_marginBottom="@dimen/_27sdp"
-            android:fontFamily="@font/opensans_regular"
-            android:text="@string/Savedautomatically"
-            android:textAlignment="center"
-            android:textColor="@color/dark_grey"
-            android:textSize="@dimen/_11ssp" />
-
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_6sdp"
+        android:layout_marginBottom="@dimen/_27sdp"
+        android:fontFamily="@font/opensans_regular"
+        android:text="@string/Savedautomatically"
+        android:textAlignment="center"
+        android:textColor="@color/dark_grey"
+        android:textSize="@dimen/_11ssp" />
 
 
 </LinearLayout>
