--- a/app/src/main/res/layout/activity_dba_information.xml
+++ b/app/src/main/res/layout/activity_dba_information.xml
@@ -933,7 +933,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/country"
-                        android:textColorHint="@color/black"
+                        android:textColorHint="@color/dark_grey"
                         app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                         app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                         app:boxCornerRadiusTopEnd="@dimen/_10sdp"
