--- a/app/src/main/res/layout/activity_merchant_transactions_list.xml
+++ b/app/src/main/res/layout/activity_merchant_transactions_list.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f2f4f5"
-    android:orientation="vertical"
-    tools:context=".view.TransactionListActivity">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
